--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="favicon.jpeg" type="image/jpeg" />
+    <link rel="icon" href="images/favicon.jpeg" type="image/jpeg" />
   </head>
   <body>
     <div class="main">
       <div class="nav">
-        <img src="logo.png" alt="logo" />
+        <img src="images/logo.png" alt="logo" />
         <div class="navcontent">
           <button class="navbut">Apply For Intership</button>
           <button class="navbut">Help Now</button>
