--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               Fill the form and earn points. <br />
               Each field is worth 10 points
             </p>
-            <img src="logo.png" alt="points" />
+            <img src="images/logo.png" alt="points" />
           </div>
         </div>
         <div class="contentright">
