--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suvidha Foundation</title>
+    <title>Gamify Forms</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="images/favicon.jpeg" type="image/jpeg" />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
     <div class="main">
       <div class="nav">
         <img src="images/logo.png" alt="logo" />
         <div class="navcontent">
-          <button class="navbut">Apply For Intership</button>
-          <button class="navbut">Help Now</button>
+          <button class="navbut">Help</button>
           <p>Events</p>
           <p>Gallery</p>
           <p>Contact</p>
@@ -44,9 +43,7 @@
       </div>
       <div class="navmob" id="menu">
         <div class="navcontentmob">
-          <button class="navbut">Apply For Intership</button>
-          <hr class="linetop" />
-          <button class="navbut">Help Now</button>
+          <button class="navbut">Help</button>
           <hr class="linetop" />
           <p>Events</p>
           <hr class="linetop" />
@@ -338,7 +335,7 @@
           </form>
         </div>
       </div>
-      <div class="footer">&copy Suvidha Mahila Mandal</div>
+      <div class="footer">&copy Gamify Forms</div>
     </div>
     <div class="res" id="score">
       <div class="mainres">
